<resources>
    <!-- App Title -->
    <string name="app_name">Getaways</string>
    <string name="welcome_to_getaways">Welcome to Getaways</string>

    <!-- Navigation -->
    <string name="Home">Home</string>
    <string name="Back">Back</string>
    <string name="add_floating_icon">Add floating icon</string>

    <!-- Actions -->
    <string name="enter">Enter</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="share">Share</string>
    <string name="set_alert">Set Alert</string>

    <!-- Vacation Details -->
    <string name="vacation_list">Vacation List</string>
    <string name="vacation_details">Vacation Details</string>
    <string name="title">Title:</string>
    <string name="hotel">Hotel:</string>
    <string name="start_date">Start date:</string>
    <string name="end_date">End date:</string>
    <string name="pick_a_date">Pick a date</string>
    <string name="enter_hotel_name">Enter hotel name</string>
    <string name="enter_vacation_title">Enter vacation title</string>
    <string name="enter_a_new_vacation">Enter a new vacation</string>

    <!-- Excursion Details -->
    <string name="excursion_title">Excursion Title</string>
    <string name="enter_excursion_title">Enter excursion title</string>
    <string name="date">Date:</string>
    <string name="current_excursions">Current excursions:</string>
    <string name="no_associated_vacation">No associated vacation</string>
    <string name="no_excursion_name">No excursion name</string>
    <string name="no_current_excursions">No current excursions</string>
    <string name="excursions">Excursions:</string>

    <!-- Messages -->
    <string name="alert">Alert</string>
    <string name="enter_your_message_below">Enter your message below:</string>
    <string name="type_your_message_here">Type your message here</string>

    <!-- Placeholders -->
    <string name="placeholder">PLACEHOLDER</string>
    <string name="content_description_airplane_icon">airplane icon</string>
    <string name="vacations">Vacations</string>
    <string name="search">Search</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="logout">Logout</string>
    <string name="my_vacations">My Vacations</string>
    <string name="add_new_vacation">Add New Vacation</string>
    <string name="menu_icon">Menu Icon</string>
    <string name="edit">Edit</string>
    <string name="edit_icon">Edit icon</string>
    <string name="alert_icon">Alert icon</string>
    <string name="add_vacation">Add Vacation</string>
    <string name="add_excursion">Add Excursion</string>
</resources>
