<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
            android:id="@+id/ic_home"
            android:icon="@drawable/baseline_home_24"
            android:title="@string/Home"
            app:showAsAction="ifRoom" />
    <item
            android:id="@+id/ic_search"
            android:icon="@drawable/baseline_search_24"
            android:title="@string/search"
            app:actionViewClass="androidx.appcompat.widget.SearchView"
            app:showAsAction="ifRoom|collapseActionView" />
    <item
            android:id="@+id/ic_logout"
            android:icon="@drawable/baseline_logout_24"
            android:title="@string/logout"
            app:showAsAction="ifRoom" />
    <item
            android:id="@+id/vacation_list"
            android:title="@string/my_vacations" />
    <item
            android:id="@+id/vacation_details"
            android:title="@string/add_new_vacation" />
</menu>