<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".UI.VacationDetails">

    <TextView
            android:text="@string/title"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:id="@+id/tv_vacation_title_share_label"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp" />

    <EditText
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:autofillHints=""
            android:inputType="text"
            android:hint="@string/enter_vacation_title"
            android:textSize="15sp"
            android:ems="10"
            android:id="@+id/etv_vacation_title"
            app:layout_constraintStart_toEndOf="@+id/tv_vacation_title_share_label"
            app:layout_constraintBottom_toBottomOf="@+id/tv_vacation_title_share_label"
            android:layout_marginStart="32dp"
            app:layout_constraintTop_toTopOf="@+id/tv_vacation_title_share_label"
            android:layout_marginTop="4dp" />

    <TextView
            android:text="@string/hotel"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:id="@+id/tv_hotel_name_share_label"
            android:textSize="20sp"
            app:layout_constraintTop_toBottomOf="@+id/tv_vacation_title_share_label"
            android:layout_marginTop="32dp"
            app:layout_constraintStart_toStartOf="@+id/tv_vacation_title_share_label" />


    <EditText
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:autofillHints=""
            android:inputType="text"
            android:hint="@string/enter_hotel_name"
            android:textSize="15sp"
            android:ems="10"
            android:id="@+id/etv_hotel_name"
            app:layout_constraintBottom_toBottomOf="@+id/tv_hotel_name_share_label"
            app:layout_constraintStart_toEndOf="@+id/tv_hotel_name_share_label"
            android:layout_marginStart="32dp"
            app:layout_constraintTop_toTopOf="@+id/tv_hotel_name_share_label"
            android:layout_marginTop="4dp" />


    <TextView
            android:text="@string/start_date"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:id="@+id/tv_start_date_share_label"
            android:textSize="20sp"
            app:layout_constraintTop_toBottomOf="@+id/tv_hotel_name_share_label"
            app:layout_constraintStart_toStartOf="@+id/tv_hotel_name_share_label"
            android:layout_marginTop="32dp" />

    <Button
            android:text="@string/pick_a_date"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:id="@+id/btn_start_date_picker"
            app:layout_constraintStart_toEndOf="@+id/tv_start_date_share_label"
            app:layout_constraintBottom_toBottomOf="@+id/tv_start_date_share_label"
            app:layout_constraintTop_toTopOf="@+id/tv_start_date_share_label"
            android:layout_marginStart="16dp" />

    <TextView
            android:text="@string/end_date"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:id="@+id/tv_end_date_share_label"
            android:textSize="20sp"
            app:layout_constraintTop_toBottomOf="@+id/tv_start_date_share_label"
            app:layout_constraintStart_toStartOf="@+id/tv_start_date_share_label"
            android:layout_marginTop="32dp" />

    <Button
            android:text="@string/pick_a_date"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:id="@+id/btn_end_date_picker"
            app:layout_constraintStart_toEndOf="@+id/tv_end_date_share_label"
            app:layout_constraintTop_toTopOf="@+id/tv_end_date_share_label"
            app:layout_constraintBottom_toBottomOf="@+id/tv_end_date_share_label"
            android:layout_marginStart="16dp" />

    <Button
            android:text="@string/save"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:id="@+id/btn_save_vacation"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_end_date_share_label"
            android:layout_marginTop="32dp"
            android:layout_marginStart="16dp" />

    <Button
            android:text="@string/delete"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:id="@+id/btn_delete_vacation"
            app:layout_constraintStart_toEndOf="@+id/btn_save_vacation"
            app:layout_constraintTop_toTopOf="@+id/btn_save_vacation"
            android:layout_marginStart="8dp" />

    <Button
            android:text="@string/alert"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btn_alert_vacation"
            app:layout_constraintEnd_toStartOf="@+id/btn_share_vacation"
            android:layout_marginEnd="8dp"
            app:layout_constraintTop_toTopOf="@+id/btn_delete_vacation" />

    <Button
            android:text="@string/share"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:id="@+id/btn_share_vacation"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp"
            app:layout_constraintTop_toTopOf="@+id/btn_alert_vacation" />

    <TextView
            android:text="@string/current_excursions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:id="@+id/tv_current_excursions_label"
            app:layout_constraintStart_toStartOf="@+id/tv_end_date_share_label"
            app:layout_constraintTop_toBottomOf="@+id/btn_save_vacation"
            android:layout_marginTop="48dp" />

    <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_excursion_list_items"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@+id/tv_current_excursions_label"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/fab_add_vacation_details"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="8dp" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:contentDescription="@string/add_floating_icon"
            app:srcCompat="@drawable/baseline_add_24"
            android:id="@+id/fab_add_vacation_details"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="24dp" />

</androidx.constraintlayout.widget.ConstraintLayout>