<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".UI.ExcursionDetails">

    <androidx.appcompat.widget.Toolbar
            android:id="@+id/custom_toolbar"
            app:titleTextAppearance="@style/toolbar_title"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    <TextView
            android:text="@string/title"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:id="@+id/tv_excursion_title"
            android:textSize="20sp"
            app:layout_constraintTop_toBottomOf="@id/custom_toolbar"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp" />

    <EditText
            android:layout_width="240dp"
            android:layout_height="48dp"
            android:autofillHints=""
            android:inputType="text"
            android:hint="@string/enter_excursion_title"
            android:textSize="15sp"
            android:ems="10"
            android:id="@+id/etv_enter_excursion_title"
            app:layout_constraintStart_toEndOf="@+id/tv_excursion_title"
            app:layout_constraintTop_toTopOf="@+id/tv_excursion_title"
            android:layout_marginStart="32dp"
            app:layout_constraintBottom_toBottomOf="@+id/tv_excursion_title"
            android:layout_marginTop="4dp"
            android:textColorHint="@color/hint_grey" />

    <TextView
            android:text="@string/date"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:id="@+id/tv_excursion_date"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="@+id/tv_excursion_title"
            app:layout_constraintTop_toBottomOf="@+id/tv_excursion_title"
            android:layout_marginTop="48dp" />

    <Button
            android:text="@string/pick_a_date"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:id="@+id/btn_excursion_date_picker"
            app:layout_constraintStart_toEndOf="@+id/tv_excursion_date"
            app:layout_constraintBottom_toBottomOf="@+id/tv_excursion_date"
            app:layout_constraintTop_toTopOf="@+id/tv_excursion_date"
            android:layout_marginStart="32dp" />

    <Button
            android:text="@string/save"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:id="@+id/btn_save_excursion"
            app:layout_constraintTop_toBottomOf="@+id/tv_excursion_date"
            android:layout_marginTop="48dp"
            app:layout_constraintEnd_toStartOf="@+id/btn_delete_excursion"
            android:layout_marginEnd="8dp" />

    <Button
            android:text="@string/delete"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:id="@+id/btn_delete_excursion"
            app:layout_constraintTop_toTopOf="@+id/btn_save_excursion"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    <Button
            android:text="@string/alert"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:id="@+id/btn_alert_excursion"
            app:layout_constraintStart_toEndOf="@+id/btn_delete_excursion"
            app:layout_constraintTop_toTopOf="@+id/btn_delete_excursion"
            android:layout_marginStart="8dp" />


</androidx.constraintlayout.widget.ConstraintLayout>