<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".UI.LoginActivity">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome_to_getaways"
            android:textSize="40sp"
            android:fontFamily="@font/devinagarden"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="32dp"
            android:id="@+id/tv_welcome_message" />

    <EditText
            android:id="@+id/etv_email_field"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_welcome_message"
            android:layout_marginTop="80dp"
            app:layout_constraintHorizontal_bias="1.0"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp" />

    <EditText
            android:id="@+id/etv_password_field"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:hint="@string/password"
            android:inputType="textPassword"
            app:layout_constraintTop_toBottomOf="@+id/etv_email_field"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="32dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="8dp" />

    <Button
            android:id="@+id/btn_login"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/login"
            app:layout_constraintTop_toBottomOf="@+id/etv_password_field"
            android:layout_marginTop="12dp"
            app:layout_constraintStart_toStartOf="@+id/etv_password_field"
            android:layout_marginStart="64dp" />

    <Button
            android:id="@+id/btn_signup"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/sign_up"
            app:layout_constraintTop_toBottomOf="@+id/etv_password_field"
            android:layout_marginTop="12dp"
            app:layout_constraintEnd_toEndOf="@+id/etv_password_field"
            android:layout_marginEnd="64dp" />

    <Button
            android:text="@string/enter"
            android:layout_width="0dp"
            android:layout_height="70dp"
            android:id="@+id/btn_submit"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginBottom="32dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp" />

</androidx.constraintlayout.widget.ConstraintLayout>