<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

    <View
            android:id="@+id/swipe_down_handle"
            android:layout_width="80dp"
            android:layout_height="4dp"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/rounded_handle" />

    <!-- Line Separator -->
    <TextView
            android:id="@+id/tv_bottom_sheet_vacation_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="26sp"
            android:text="@string/placeholder"
            android:ellipsize="end"
            android:maxLines="1"
            android:padding="24dp"
            android:textAlignment="center" />

    <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/black_opacity10" />

    <TextView
            android:id="@+id/tv_edit_row"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/edit"
            android:padding="16dp"
            app:drawableLeftCompat="@drawable/baseline_edit_24"
            android:drawablePadding="20dp" />

    <!-- Line Separator -->
    <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/black_opacity10" />

    <TextView
            android:id="@+id/tv_alert_row"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/alert"
            android:padding="16dp"
            app:drawableLeftCompat="@drawable/baseline_add_alert_24"
            android:drawablePadding="20dp" />

    <!-- Line Separator -->
    <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/black_opacity10" />

    <TextView
            android:id="@+id/tv_share_row"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/share"
            android:padding="16dp"
            app:drawableLeftCompat="@drawable/baseline_share_24"
            android:drawablePadding="20dp" />

    <!-- Line Separator -->
    <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/black_opacity10" />

    <TextView
            android:id="@+id/tv_delete_row"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/delete"
            android:padding="16dp"
            app:drawableLeftCompat="@drawable/baseline_delete_24"
            android:drawablePadding="20dp" />

</LinearLayout>
