<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".UI.VacationShare">

    <TextView
            android:text="@string/title"
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:id="@+id/tv_vacation_title_share_label"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp" />

    <TextView
            android:text="@string/hotel"
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:id="@+id/tv_hotel_name_share_label"
            android:textSize="20sp"
            app:layout_constraintTop_toBottomOf="@+id/tv_vacation_title_share_label"
            android:layout_marginTop="32dp"
            app:layout_constraintStart_toStartOf="@+id/tv_vacation_title_share_label" />


    <TextView
            android:text="@string/start_date"
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:id="@+id/tv_start_date_share_label"
            android:textSize="20sp"
            app:layout_constraintTop_toBottomOf="@+id/tv_hotel_name_share_label"
            app:layout_constraintStart_toStartOf="@+id/tv_hotel_name_share_label"
            android:layout_marginTop="32dp" />

    <TextView
            android:text="@string/end_date"
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:id="@+id/tv_end_date_share_label"
            android:textSize="20sp"
            app:layout_constraintTop_toBottomOf="@+id/tv_start_date_share_label"
            app:layout_constraintStart_toStartOf="@+id/tv_start_date_share_label"
            android:layout_marginTop="32dp" />

    <TextView
            android:text="@string/placeholder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:id="@+id/tv_vacation_title_share"
            app:layout_constraintStart_toEndOf="@+id/tv_vacation_title_share_label"
            android:layout_marginStart="8dp"
            app:layout_constraintBottom_toBottomOf="@+id/tv_vacation_title_share_label"
            app:layout_constraintTop_toTopOf="@+id/tv_vacation_title_share_label"
            android:layout_marginTop="4dp" />

    <TextView
            android:text="@string/placeholder"
            android:layout_width="wrap_content"
            android:textSize="20sp"
            android:layout_height="wrap_content"
            android:id="@+id/tv_hotel_name_share"
            app:layout_constraintStart_toStartOf="@+id/tv_vacation_title_share"
            app:layout_constraintBottom_toBottomOf="@+id/tv_hotel_name_share_label"
            app:layout_constraintTop_toTopOf="@+id/tv_hotel_name_share_label"
            android:layout_marginTop="4dp" />

    <TextView
            android:text="@string/placeholder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_start_date_share"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="@+id/tv_hotel_name_share"
            app:layout_constraintBottom_toBottomOf="@+id/tv_start_date_share_label"
            app:layout_constraintTop_toTopOf="@+id/tv_start_date_share_label"
            android:layout_marginTop="4dp" />

    <TextView
            android:text="@string/placeholder"
            android:layout_width="wrap_content"
            android:textSize="20sp"
            android:layout_height="wrap_content"
            android:id="@+id/tv_end_date_share"
            app:layout_constraintStart_toStartOf="@+id/tv_start_date_share"
            app:layout_constraintBottom_toBottomOf="@+id/tv_end_date_share_label"
            app:layout_constraintTop_toTopOf="@+id/tv_end_date_share_label"
            android:layout_marginTop="4dp" />

    <TextView
            android:text="@string/excursions"
            android:layout_height="wrap_content"
            android:layout_width="110dp"
            android:textSize="20sp"
            android:id="@+id/tv_excursions_share_label"
            app:layout_constraintStart_toStartOf="@+id/tv_end_date_share_label"
            app:layout_constraintTop_toBottomOf="@+id/tv_end_date_share_label"
            android:layout_marginTop="32dp" />


    <TextView
            android:text="@string/enter_your_message_below"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:id="@+id/tv_enter_message_prompt"
            app:layout_constraintStart_toStartOf="@+id/tv_end_date_share_label"
            app:layout_constraintTop_toBottomOf="@+id/rv_excursion_list_items_share"
            android:layout_marginTop="48dp" />

    <EditText
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:autofillHints=""
            android:inputType="textMultiLine"
            android:hint="@string/type_your_message_here"
            android:textSize="14sp"
            android:gravity="start|top"
            android:ems="10"
            android:id="@+id/etml_user_message"
            app:layout_constraintTop_toBottomOf="@+id/tv_enter_message_prompt"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="8dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            app:layout_constraintBottom_toTopOf="@+id/btn_share_email"
            android:layout_marginBottom="16dp" />

    <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_excursion_list_items_share"
            android:layout_width="0dp"
            android:layout_marginEnd="24dp"
            android:layout_height="56dp"
            android:scrollbars="vertical"
            android:fadeScrollbars="false"
            app:layout_constraintTop_toTopOf="@+id/tv_excursions_share_label"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/tv_end_date_share"
            android:layout_marginTop="4dp" />

    <Button
            android:text="@string/share"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btn_share_email"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="16dp" />

</androidx.constraintlayout.widget.ConstraintLayout>